alteração de link Womakers

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="assets/imagens/Bot.Danna/Danna.bot.01.jpeg" alt="DannaCode">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="https://www.linkedin.com/groups/12042170/">Comunidade Womakers</a>
+            <a class="cabecalho-menu-item" href="https://linktr.ee/womakerscode">Comunidade Womakers</a>
             <a class="cabecalho-menu-item" href="https://www.linkedin.com/in/danielealencar">Responsável pela criação da página</a>
         </nav>
     </header>
